UIMA-1560 Added check for null before dereferencing casProcessor
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@812549 13f79535-47bb-0310-9956-ffa450edef68